Corrupted sample led to long vout wait

It's not really a freeze, since the vout is waiting for a picture date 70 seconds in the future:

08-02 16:33:05.332  8910  8948 E VLC-std : vout_PutPicture(52875623)
08-02 16:33:05.332  8910  8948 E VLC-std : vout_PutPicture(52875634)
08-02 16:33:05.335  8910  8948 E VLC-std : vout_PutPicture(52875645)
08-02 16:33:05.336  8910  8948 E VLC-std : vout_PutPicture(52875656)
08-02 16:33:05.338  8910  8948 E VLC-std : vout_PutPicture(52892289)
08-02 16:33:05.338  8910  8948 E VLC-std : vout_PutPicture(52892289)
08-02 16:33:05.341  8910  8948 E VLC-std : vout_PutPicture(52892301)
08-02 16:33:05.345  8910  8948 E VLC-std : vout_PutPicture(52975712)
08-02 16:33:05.345  8910  8948 E VLC-std : vout_PutPicture(52975712)
08-02 16:33:05.346  8910  8948 E VLC-std : vout_PutPicture(124530523)  <--------- Corrupted
08-02 16:33:05.346  8910  8948 E VLC-std : vout_PutPicture(53009078)
08-02 16:33:05.347  8910  8948 E VLC-std : vout_PutPicture(53025745)
08-02 16:33:05.351  8910  8948 E VLC-std : vout_PutPicture(53059112)
08-02 16:33:05.353  8910  8948 E VLC-std : vout_PutPicture(53075801)

The current issue, with the current sample, is only happening with MediaCodec (tested on than one device/manufacturer), but this could happen with any decoder modules.

Sample: https://streams.videolan.org/issues/28339/CH10-MPEG2-5WLWT.ts

Edited by Thomas Guillem