mediacodec: fix possible video freeze in case of corrupted input

Fixes #28339